archive/parser/tests/snapshots/statements/valid/0053@1.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE PUBLICATION mypublication FOR TABLE users, departments;"
---
Parse {
    cst: SourceFile@0..62
      CreatePublicationStmt@0..62
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Publication@7..18 "PUBLICATION"
        Whitespace@18..19 " "
        Ident@19..32 "mypublication"
        Whitespace@32..33 " "
        For@33..36 "FOR"
        Whitespace@36..37 " "
        Table@37..42 "TABLE"
        Whitespace@42..43 " "
        PublicationObjSpec@43..48
          PublicationTable@43..48
            RangeVar@43..48
              Ident@43..48 "users"
        Ascii44@48..49 ","
        Whitespace@49..50 " "
        PublicationObjSpec@50..61
          PublicationTable@50..61
            RangeVar@50..61
              Ident@50..61 "departments"
        Ascii59@61..62 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreatePublicationStmt(
                CreatePublicationStmt {
                    pubname: "mypublication",
                    options: [],
                    pubobjects: [
                        Node {
                            node: Some(
                                PublicationObjSpec(
                                    PublicationObjSpec {
                                        pubobjtype: PublicationobjTable,
                                        name: "",
                                        pubtable: Some(
                                            PublicationTable {
                                                relation: Some(
                                                    RangeVar {
                                                        catalogname: "",
                                                        schemaname: "",
                                                        relname: "users",
                                                        inh: true,
                                                        relpersistence: "p",
                                                        alias: None,
                                                        location: 43,
                                                    },
                                                ),
                                                where_clause: None,
                                                columns: [],
                                            },
                                        ),
                                        location: 0,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                PublicationObjSpec(
                                    PublicationObjSpec {
                                        pubobjtype: PublicationobjTable,
                                        name: "",
                                        pubtable: Some(
                                            PublicationTable {
                                                relation: Some(
                                                    RangeVar {
                                                        catalogname: "",
                                                        schemaname: "",
                                                        relname: "departments",
                                                        inh: true,
                                                        relpersistence: "p",
                                                        alias: None,
                                                        location: 50,
                                                    },
                                                ),
                                                where_clause: None,
                                                columns: [],
                                            },
                                        ),
                                        location: 50,
                                    },
                                ),
                            ),
                        },
                    ],
                    for_all_tables: false,
                },
            ),
            range: 0..61,
        },
    ],
}
