archive/parser/tests/snapshots/statements/valid/0053@3.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE PUBLICATION alltables FOR ALL TABLES;
---
Parse {
    cst: SourceFile@0..44
      CreatePublicationStmt@0..44
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Publication@7..18 "PUBLICATION"
        Whitespace@18..19 " "
        Ident@19..28 "alltables"
        Whitespace@28..29 " "
        For@29..32 "FOR"
        Whitespace@32..33 " "
        All@33..36 "ALL"
        Whitespace@36..37 " "
        Tables@37..43 "TABLES"
        Ascii59@43..44 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreatePublicationStmt(
                CreatePublicationStmt {
                    pubname: "alltables",
                    options: [],
                    pubobjects: [],
                    for_all_tables: true,
                },
            ),
            range: 0..43,
        },
    ],
}
