archive/parser/tests/snapshots/statements/valid/0054@1.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE CONVERSION myconv FOR 'UTF8' TO 'LATIN1' FROM myfunc;"
---
Parse {
    cst: SourceFile@0..60
      CreateConversionStmt@0..60
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        ConversionP@7..17 "CONVERSION"
        Whitespace@17..18 " "
        Ident@18..24 "myconv"
        Whitespace@24..25 " "
        For@25..28 "FOR"
        Whitespace@28..29 " "
        Sconst@29..35 "'UTF8'"
        Whitespace@35..36 " "
        To@36..38 "TO"
        Whitespace@38..39 " "
        Sconst@39..47 "'LATIN1'"
        Whitespace@47..48 " "
        From@48..52 "FROM"
        Whitespace@52..53 " "
        Ident@53..59 "myfunc"
        Ascii59@59..60 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateConversionStmt(
                CreateConversionStmt {
                    conversion_name: [
                        Node {
                            node: Some(
                                String(
                                    String {
                                        sval: "myconv",
                                    },
                                ),
                            ),
                        },
                    ],
                    for_encoding_name: "UTF8",
                    to_encoding_name: "LATIN1",
                    func_name: [
                        Node {
                            node: Some(
                                String(
                                    String {
                                        sval: "myfunc",
                                    },
                                ),
                            ),
                        },
                    ],
                    def: false,
                },
            ),
            range: 0..59,
        },
    ],
}
