archive/parser/tests/snapshots/statements/valid/0055@1.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: select 1 union all select 2;
---
Parse {
    cst: SourceFile@0..28
      SelectStmt@0..28
        Select@0..6 "select"
        Whitespace@6..7 " "
        SelectStmt@7..8
          ResTarget@7..8
            AConst@7..8
              Iconst@7..8 "1"
        Whitespace@8..9 " "
        Union@9..14 "union"
        Whitespace@14..15 " "
        All@15..18 "all"
        Whitespace@18..19 " "
        SelectStmt@19..27
          Select@19..25 "select"
          Whitespace@25..26 " "
          ResTarget@26..27
            AConst@26..27
              Iconst@26..27 "2"
        Ascii59@27..28 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: SelectStmt(
                SelectStmt {
                    distinct_clause: [],
                    into_clause: None,
                    target_list: [],
                    from_clause: [],
                    where_clause: None,
                    group_clause: [],
                    group_distinct: false,
                    having_clause: None,
                    window_clause: [],
                    values_lists: [],
                    sort_clause: [],
                    limit_offset: None,
                    limit_count: None,
                    limit_option: Default,
                    locking_clause: [],
                    with_clause: None,
                    op: SetopUnion,
                    all: true,
                    larg: Some(
                        SelectStmt {
                            distinct_clause: [],
                            into_clause: None,
                            target_list: [
                                Node {
                                    node: Some(
                                        ResTarget(
                                            ResTarget {
                                                name: "",
                                                indirection: [],
                                                val: Some(
                                                    Node {
                                                        node: Some(
                                                            AConst(
                                                                AConst {
                                                                    isnull: false,
                                                                    location: 7,
                                                                    val: Some(
                                                                        Ival(
                                                                            Integer {
                                                                                ival: 1,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ),
                                                location: 7,
                                            },
                                        ),
                                    ),
                                },
                            ],
                            from_clause: [],
                            where_clause: None,
                            group_clause: [],
                            group_distinct: false,
                            having_clause: None,
                            window_clause: [],
                            values_lists: [],
                            sort_clause: [],
                            limit_offset: None,
                            limit_count: None,
                            limit_option: Default,
                            locking_clause: [],
                            with_clause: None,
                            op: SetopNone,
                            all: false,
                            larg: None,
                            rarg: None,
                        },
                    ),
                    rarg: Some(
                        SelectStmt {
                            distinct_clause: [],
                            into_clause: None,
                            target_list: [
                                Node {
                                    node: Some(
                                        ResTarget(
                                            ResTarget {
                                                name: "",
                                                indirection: [],
                                                val: Some(
                                                    Node {
                                                        node: Some(
                                                            AConst(
                                                                AConst {
                                                                    isnull: false,
                                                                    location: 26,
                                                                    val: Some(
                                                                        Ival(
                                                                            Integer {
                                                                                ival: 2,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ),
                                                location: 26,
                                            },
                                        ),
                                    ),
                                },
                            ],
                            from_clause: [],
                            where_clause: None,
                            group_clause: [],
                            group_distinct: false,
                            having_clause: None,
                            window_clause: [],
                            values_lists: [],
                            sort_clause: [],
                            limit_offset: None,
                            limit_count: None,
                            limit_option: Default,
                            locking_clause: [],
                            with_clause: None,
                            op: SetopNone,
                            all: false,
                            larg: None,
                            rarg: None,
                        },
                    ),
                },
            ),
            range: 0..27,
        },
    ],
}
